# skjera

./: .dockerignore  .gitignore  .settings.sh  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  init.sql  otelcol-config.yaml  skjera-api.yaml
.github/workflows/: main.yml
backend/: Cargo.toml  build.rs
backend/src/: actor.rs  birthday_assistant.rs  birthday_bot.rs  employee.rs  html.rs  logging.rs  macros.rs  main.rs  meta.rs  model.rs  oauth.rs  session.rs  skjera.rs  slack.rs  slack_client.rs  slack_interaction_server.rs  web.rs
backend/src/actor/: mod.rs  slack.rs  slack_conversation_server.rs  watchdog.rs
backend/src/actor/slack/: default_handler.rs  slack_conversation_server.rs
backend/src/actor/tests/: mod.rs  watchdog.rs
backend/src/bot/: birthday.rs  birthday_actor.rs  birthday_actors.rs  birthdays_actor.rs  hey.rs  mod.rs  skjera_slack_conversation.rs  skjera_slack_conversations.rs
backend/src/model/: employee.rs  some_account.rs
backend/src/web/: html.rs  mod.rs  oauth.rs  slack.rs  slack_bot.rs  web.rs
backend/templates/: _base.html  employee-message.html  employee.html  hello.html  login.html  me.html  unauthorized.html
migrations/: 00-create.sql  00-drop.sql  20241225094146_baseline.sql  20241225161533_baseline.sql  20241226063214_baseline.sql  20241228103239_date_of_birth.sql  20241231152001_dob.sql  20250102151902_baseline.sql  20250103095402_some.sql  20250105162906_avatar.down.sql  20250105162906_avatar.up.sql  20250106184854_some.down.sql  20250106184854_some.up.sql  20250106190133_some.down.sql  20250106190133_some.up.sql  20250107144302_some.down.sql  20250107144302_some.up.sql
skjera_api/: Cargo.toml  README.md
skjera_api/.openapi-generator/: FILES
skjera_api/src/: models.rs  types.rs
skjera_api/src/apis/: html.rs  meta.rs  mod.rs  skjera.rs
skjera_api/src/server/: mod.rs
