[package]
name = "skjera"
version = "0.1.0"
edition = "2021"


[features]
default = ["loki"]
otel = []

loki = [
    "tracing-loki"
]

[dependencies]
anyhow = "1.0.95"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
async-openai = { version = "0.27.1" }
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["cookie", "multipart", "typed-header"] }
axum-login = { version = "0.17.0" }
dotenv = "0.15.0"
http = "1.2.0"
oauth2 = "4.4.2"
once_cell = "1.20.2"
openidconnect = { version = "3.5.0", features = ["reqwest"] }
opentelemetry = { version = "0.27.1", features = ["tracing"] }
#opentelemetry-appender-tracing = { version = "0.27.0", features = [] } # , features = ["log"]
opentelemetry-otlp = { version = "0.27.0", features = ["tracing", "metrics", "logs", "serialize", "http-proto", "reqwest-rustls", "reqwest-client"] }
opentelemetry-semantic-conventions = { version = "0.27.0" }
opentelemetry_sdk = { version = "0.27.1", features = ["tracing", "logs", "rt-tokio", ] }
reqwest = { version = "0.11.27", features = ["json"] }
rustls = { version = "0.23.21" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
slack-morphism = { version = "2.8.0", features = ["hyper", "axum"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "time", "uuid"] }
thiserror = "1.0.69"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-sessions = { version = "0.14.0", features = ["memory-store"] }
tracing = { version = "0.1.41", features = ["std", "log"] }
tracing-loki = { version = "0.2.6", optional = true }
tracing-opentelemetry = { version = "0.28.0", features = [] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry", "fmt"] }
url = "2.5.4"

[build-dependencies]
build-data = "0.2.1"
